--- a/_posts/2025-03-10-data-blog2.md
+++ b/_posts/2025-03-10-data-blog2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Extrinsic Hallucinations in LLMs"
-categories: data-ai
+categories:  [data-ai]
 date: 2024-07-07
 reading_time: 30
 author: Joy
