--- a/_posts/2025-03-01-data-blog1.md
+++ b/_posts/2025-03-01-data-blog1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Reward Hacking in Reinforcement Learning"
-categories: data-ai
+categories:  [data-ai]
 date: 2024-11-28
 reading_time: 37
 author: Joy
