--- a/_posts/2025-03-02-career2.md
+++ b/_posts/2025-03-02-career2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Diffusion Models for Video Generation"
-categories: career
+categories: [career]
 date: 2024-04-12
 reading_time: 28
 author: Joy
