--- a/_posts/2025-03-11-data-blog3.md
+++ b/_posts/2025-03-11-data-blog3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Diffusion Models for Video Generation"
-categories: data-ai
+categories:  [data-ai]
 date: 2024-04-12
 reading_time: 28
 author: Joy
